--- a/style.css
+++ b/style.css
@@ -282,8 +282,17 @@ section {
   font-weight: 500;
   box-shadow: 0 8px 20px rgba(0,0,0,0.08);
   transition: 0.3s ease;
-  cursor: pointer;
+
+  opacity: 0;
+  transform: translateY(30px);
 }
+
+.reveal.active .skill {
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 0.6s ease;
+}
+
 
 .skill:hover {
   transform: translateY(-5px);
